# dan_toropov_cw_5

./: .gitignore  README.md  main.py  pyproject.toml
src/: api.py  dbase.ini.example  dbmanager.py  exceptions.py  interface.py  menu.py  settings.py  utils.py
tests/: conftest.py  test_api.py  test_dbmanager.py  test_interface.py  test_menu.py  test_utils.py  test_utils_from_github.py
